# gh-sparkle

./: AGENTS.md  Cargo.toml  README.md  extension.yml
.github/workflows/: ci.yml  release.yml
assets/: commitmsg.prompt.yml
src/: git.rs  lib.rs  llm.rs  main.rs  prompt.rs  ui.rs
